fixed word wrap in code block

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -186,7 +186,12 @@ header #title {
     padding: 0 2em;
     font-family: var(--font-family-fixedsys);
     font-size: 1em;
-    text-wrap: wrap;
+    word-break: break-all;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    line-break: anywhere;
+    white-space: pre-wrap;
+    white-space: break-spaces;
     line-height: 1.6em;
     color: var(--color-white);
 }
